--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg bg-white border-bottom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Geeks</a>
+          <img
+            src="	https://geeks-react.netlify.app/static/media/logo.e22c846d87ff5a1252df471397badc6d.svg"
+            alt=""
+            class="logo-inverse"
+          />
           <button
             class="navbar-toggler"
             type="button"
